# VSPEC

./: .gitignore  .readthedocs.yaml  AUTHORS.md  CITATION.cff  CNAME  LICENSE  PlanetBuilder.py  PlotBuilder.py  README.md  SpectraBuilder.py  StarBuilder.py  environment-rtd.yml  environment.yaml  environment.yml  geometry.py  main.py  pyproject.toml  read_info.py  requirements.txt  rtd_setup.py  setup.py  star_functions.py  test_cfg.txt  variable_star_model.py
.github/workflows/: build-docs.yml  publish-to-pypi.yml  python-package-conda.yml  python-test-conda.yml
0.6.0/: .buildinfo  components.html  genindex.html  getting_started.html  index.html  inputs.html  intro.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js  sg_execution_times.html
0.6.0/_images/: inheritance-765a7cb4b2138dcb9f114c70b3e81342f4790034.png.map
0.6.0/_sources/: components.rst.txt  sg_execution_times.rst.txt
0.6.0/api/: VSPEC.ObservationModel.html  VSPEC.PhaseAnalyzer.html  VSPEC.params.BandpassParameters.html  VSPEC.params.BaseParameters.html  VSPEC.params.CoronagraphParameters.html  VSPEC.params.DetectorParameters.html  VSPEC.params.FaculaParameters.html  VSPEC.params.FlareParameters.html  VSPEC.params.GranulationParameters.html  VSPEC.params.GravityParameters.html  VSPEC.params.Header.html  VSPEC.params.InstrumentParameters.html  VSPEC.params.InternalParameters.html  VSPEC.params.LimbDarkeningParameters.html  VSPEC.params.ObservationParameters.html  VSPEC.params.PlanetParameters.html  VSPEC.params.SingleDishParameters.html  VSPEC.params.SpotParameters.html  VSPEC.params.StarParameters.html  VSPEC.params.SystemParameters.html  VSPEC.params.TelescopeParameters.html  VSPEC.params.ccdParameters.html  VSPEC.params.gcmParameters.html  VSPEC.params.psgParameters.html
1.0.0/: .buildinfo  components.html  genindex.html  getting_started.html  index.html  inputs.html  intro.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js  sg_execution_times.html
1.0.0/_sources/: sg_execution_times.rst.txt
1.0.0/api/: VSPEC.ObservationModel.html  VSPEC.PhaseAnalyzer.html  VSPEC.params.BandpassParameters.html  VSPEC.params.BaseParameters.html  VSPEC.params.BlackbodyGridParameters.html  VSPEC.params.CoronagraphParameters.html  VSPEC.params.DetectorParameters.html  VSPEC.params.FaculaParameters.html  VSPEC.params.FlareParameters.html  VSPEC.params.GranulationParameters.html  VSPEC.params.GravityParameters.html  VSPEC.params.Header.html  VSPEC.params.InstrumentParameters.html  VSPEC.params.InternalParameters.html  VSPEC.params.LimbDarkeningParameters.html  VSPEC.params.ObservationParameters.html  VSPEC.params.PlanetParameters.html  VSPEC.params.SingleDishParameters.html  VSPEC.params.SpotParameters.html  VSPEC.params.StarParameters.html  VSPEC.params.SystemParameters.html  VSPEC.params.ccdParameters.html  (+4 more)
1.1.0/: .buildinfo  components.html  genindex.html  index.html  redirect.html  search.html  searchindex.js  sg_execution_times.html
Configs/: proxCenRealistic.cfg  proxCenTest.cfg
GCMs/: config.txt
ProxCenTest/: surfaceMapInfo.txt
VSPEC/: PlanetBuilder.py  PlotBuilder.py  SpectraBuilder.py  StarBuilder.py  __init__.py  analysis.py  config.py  files.py  geometry.py  helpers.py  main.py  psg_api.py  read_info.py  stellar_spectra.py  variable_star_model.py
docs/: index.md  param_descriptions.csv  param_descriptions.txt  readme.md  readme.rst  rebuild.sh  to_latex.py
examples/: README.rst
latest/: .buildinfo  components.html  genindex.html  getting_started.html  index.html  inputs.html  intro.html  py-modindex.html  references.html  search.html  searchindex.js  sg_execution_times.html
scripts/: bin_spectra.py
test/: conftest.py  default.cfg  default.yaml  test_analysis.py  test_faculae.py  test_files.py  test_geometry.py  test_helpers.py  test_main.py  test_psg_api.py  test_read_info.py  test_readme.md  test_run_waccm.py  test_spots.py  test_star.py  test_waccm.py  waccm.cfg
(+1428 files in other folders)
